Fix the login button visibility and spawner spacing

--- a/nebari_jupyterhub_theme/templates/style.css
+++ b/nebari_jupyterhub_theme/templates/style.css
@@ -111,6 +111,13 @@ a{
     text-decoration: none;
 }
 
+/* Spawner form */
+
+#kubespawner-profiles-list > label.profile {
+  margin-bottom: 12px;
+  padding-bottom: 0;
+}
+
 /* Authenticator form */
 #login-main .auth-form-header {
     background: var(--accent-color) !important;
